<resources>
    <string name="preference_file_key">ADDEDFOOD</string>
    <string name="app_name">.｡✿*ﾟFood Trackerﾟ*✿｡.</string>
    <string name="title_activity_show_all_main">Add meal</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="spinner_options">
        <item name="Breakfast">Breakfast</item>
        <item name="Lunch">Lunch</item>
        <item name="Dinner">Dinner</item>
        <item name="Snack">Snack</item>
        <item name="Beverage">Beverage</item>
    </string-array>

    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="beverage">Beverage</string>
</resources>